<resources>
    <string name="app_name">Voca루틴</string>
    <string name="app_name_kr">Voca루틴</string>
    <string name="fragment_login">로그인 화면</string>
    <string name="fragment_setting">설정 화면</string>
    <string name="fragment_my_list">나의 단어장</string>
    <string name="fragment_online_list">온라인 단어장</string>
    <string name="fragment_detail">단어장 상세 화면</string>
    <string name="fragment_home">홈화면</string>
    <string name="app_logo">앱 로고</string>
    <string name="my_list">나의 단어장</string>
    <string name="navigation_today">오늘</string>
    <string name="navigation_today_list">단어장</string>
    <string name="navigation_online">온라인</string>
    <string name="navigation_setting">설정</string>
    <string name="total_count">%d단어</string>
    <string name="day_seven">7번째 복습</string>
    <string name="day_three">3번째 복습</string>
    <string name="day_one">1번째 복습</string>
    <string name="etymology">어원</string>
    <string name="gpt_response_error">어원 불러오기 오류</string>
    <string name="loading_etymology">어원을 불러오는 중입니다.</string>
    <string name="review_notification">복습 알림</string>
    <string name="time_to_review">복습할 시간입니다.</string>
    <string name="review_channel_description">복습 설정 알림 채널</string>
    <string name="set_notification_description">알림 설정 버튼</string>
    <string name="set_download_description">오프라인 저장 버튼</string>
    <string name="set_upload_description">업로드 버튼</string>
    <string name="set_review_notification_success">복습 알림이 설정되었습니다.</string>
    <string name="set_review_notification_fail">알림이 정상적으로 설정되지 않았습니다.</string>
    <string name="cancel_review_notification_success">복습 알림이 해제되었습니다.</string>
    <string name="passedDays">%d일전 추가됨</string>
    <string name="invalid_date_format">잘못된 날짜 포맷</string>
    <string name="making_list">단어장 만들기</string>
    <string name="load_from_picture">촬영해서 불러오기</string>
    <string name="taking_photo">사진 촬영</string>
    <string name="fill_in_self">직접 작성하기</string>
    <string name="vocabulary">단어</string>
    <string name="meaning">의미</string>
    <string name="meaning_separation">콤마(,)로 뜻을 구분해 주세요</string>
    <string name="next">다음</string>
    <string name="fragment_creation">단어장 작성 화면</string>
    <string name="done">끝내기</string>
    <string name="new_list">새 단어장</string>
    <string name="fab_new_list">새 단어장 만들기</string>
    <string name="fill_in_blank_word">단어를 작성해 주세요.</string>
    <string name="fill_in_blank_meaning">의미를 작성해 주세요.</string>
    <string name="alarm_code_creation_error">알람코드 생성오류: %s</string>
    <string name="list_name">단어장 이름</string>
    <string name="fill_in_title">단어장 이름을 입력하세요.</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="empty_list">저장된 단어가 없습니다.</string>
    <string name="navigation_dialog">제목 입력 다이얼로그</string>
    <string name="error">error</string>
    <string name="loading_etymology_now">어원을 불러오는 중</string>
    <string name="online_list">온라인 단어장</string>
    <string name="download_to_mine">단어장 내려받기 버튼</string>
    <string name="navigation_online_detail">단어장 공유 상세 화면</string>
    <string name="navigation_scan">카메라로 스캔하는 화면</string>
    <string name="extract_word_from_picture">문자를 인식 중 이에요…</string>
    <string name="please_scan_again">다시 스캔해 주세요.</string>
    <string name="capture_image">캡쳐한 이미지</string>
    <string name="ocr_result">인식 결과</string>
    <string name="navigation_after_photo">OCR 스캔 결과 화면</string>
    <string name="take_picture">촬영</string>
    <string name="result_empty">인식된 결과가 없습니다.</string>
    <string name="count_my_list">%d개의 내 단어장</string>
    <string name="count_share_list">%d개의 단어장이 공유됨</string>
    <string name="load_data">데이터 로드중…</string>
    <string name="setting">설정</string>
    <string name="account_information">계정 정보</string>
    <string name="logout">로그아웃</string>
    <string name="manage_shared_list">공유된 단어장 관리</string>
    <string name="delete">지우기</string>
    <string name="manage_my_list">내 단어장 관리</string>
    <string name="delete_all">모두 지우기</string>
    <string name="delete_complete_my_list">모든 단어장이 삭제되었습니다.</string>
    <string name="delete_complete_shared_list">모든 단어장 공유가 중단되었습니다.</string>
    <string name="logout_done">로그아웃됨</string>
    <string name="share_complete">공유가 완료되었습니다.</string>
    <string name="already_share">이미 공유된 단어장입니다.</string>
    <string name="list_already_exist">이미 존재하는 단어장입니다.</string>
    <string name="list_download_complete">단어장이 다운로드 되었습니다.</string>
    <string name="alarm_code_error_try_again">알람코드 생성 오류\n 다시 다운로드 해주세요,</string>
    <string name="share_ignored">공유받은 단어장은 공유할 수 없습니다.</string>
    <string name="today_vocabulary">오늘의 단어</string>
    <string name="lets_study">오늘도 공부하러 가볼까요?</string>
    <string name="finish_review">복습을 마치셨어요!</string>
    <string name="quiz_ok">\n알아요!</string>
    <string name="quiz_no">\n몰라요</string>
    <string name="add_to_review">복습 카드로</string>
    <string name="navigation_vocabulary_front">단어장 앞면</string>
    <string name="navigation_vocabulary_back">단어장 뒷면</string>
    <string name="review_count_update_error">복습 횟수 업데이트에 실패했습니다.</string>
    <string name="check_internet_status">인터넷 연결을 확인해주세요.</string>
    <string name="connection_out_description">인터넷과 연결이 끊긴 상태를 알리는 이미지</string>
    <string name="fail_to_load_etymology">어원 불러오기를 실패했습니다.</string>
    <string name="empty_online_description">공유된 단어장이 없음을 알리는 이미지</string>
    <string name="nothing_shared_yet">아직 공유된 단어장이 없어요.</string>
    <string name="delete_list_complete">단어장이 삭제되었습니다.</string>
    <string name="remove">삭제</string>
    <string name="save_list_on_device_success">단어장이 기기에 저장되었습니다.</string>
    <string name="delete_list_on_device_success">단어장이 기기에서 삭제되었습니다.</string>
    <string name="empty_mine_description">작성된 단어장이 없는 것을 알리는 이미지</string>
    <string name="nothing_mine_yet">새 단어장 버튼을 눌러서\n단어장을 만들어 보세요!</string>
    <string name="nothing_downloaded_yet">다운로드한 단어장이 없습니다.</string>
    <string name="able_anything_except_review">복습 알림 기능 외 모두 사용 가능합니다.</string>
    <string name="agree">확인</string>
    <string name="message_sign_in_failure">로그인에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="logout_success">로그아웃됨</string>
    <string name="scan_hint">먼저 스캔해 주세요.</string>
    <string name="share_fail">공유에 실패했습니다.</string>
    <string name="delete_fail">삭제에 실패했습니다.</string>
    <string name="fail_delete_list">단어장 삭제에 실패했습니다.</string>
    <string name="fail_download_list">단어장 다운로드에 실패했습니다.</string>
    <string name="fail_authentication">사용자 인증에 실패했습니다.</string>
    <string name="fail_create_list">단어장 생성에 실패했습니다.</string>
    <string name="fail_scan_document">문서 스캐너 실행을 실패했습니다.</string>
    <string name="navigation_policy_agreement">약관 동의 화면</string>
    <string name="policy_agreement_title">이용약관 동의</string>
    <string name="policy_agreement_content">서비스 이용을 위해서 필수 약관 동의가 필요합니다.</string>
    <string name="check">확인</string>
    <string name="agree_privacy_policy">개인정보 수집 이용 동의</string>
    <string name="essential">(필수)</string>
    <string name="btn_privacy">개인정보 수집 안내 버튼</string>
    <string name="agree_terms">이용약관 동의</string>
    <string name="btn_terms">이용약관 안내 버튼</string>
    <string name="order_than_fourteen">만 14세 이상입니다.</string>
    <string name="all_agree">전체 동의</string>
    <string name="privacy_policy">개인정보 처리 방침</string>
    <string name="service_policy">서비스 이용약관</string>
    <string name="setting_account">계정 관리</string>
    <string name="logout_description">단어장을 유지한 채 로그아웃만 합니다.</string>
    <string name="account_delete_description">단어장을 모두 삭제하고 탈퇴합니다.</string>
    <string name="setting_list">단어장 관리</string>
    <string name="terms_and_privacy">이용 약관</string>
    <string name="navigation_policy">약관 안내 화면</string>
    <string name="navigation_list_setting">단어장 관리 화면</string>
    <string name="navigation_account_setting">계정 관리 화면</string>
    <string name="account_delete">회원탈퇴</string>
    <string name="fail_delete_account">계정 삭제에 실패했습니다.\n로그아웃 후 다시 로그인한 후 재시도해 주세요.</string>
    <string name="success_account_delete">계정이 삭제되었습니다.</string>
    <string name="sign_in_with_google">Google로 시작하기</string>
    <string name="permission_information">권한 안내</string>
    <string name="permission_agree">동의하기</string>
    <string name="later">나중에 하기</string>
    <string name="permission_description_first">복습 기능을 위해서는 알림 권한과\n알람 및 리마인더 권한이 필요합니다.</string>
    <string name="permission_description_second">아래 \'동의하기\'버튼을 눌러서\n권한 사용에 동의해주세요.</string>
    <string name="permission_denied_content_first">복습 알림 기능 이외에는\n모두 사용 가능합니다.</string>
    <string name="permission_denied_content_second">추후에 권한을 설정하시려면\n상세 단어장에서 알림 버튼을 눌러주세요.</string>
    <string name="navigation_permission_dialog">권한 요청 다이얼로그</string>
    <string name="navigation_permission_denied_dialog">권한 거절됨 다이얼로그</string>
    <string name="check_alarm_reminders_permission">알람 및 리마인더 권한이 필요합니다.</string>
    <string name="check_alarm_permission">알림 권한이 필요합니다.</string>
    <string name="btn_sign_in_progress">로그인 진행 중</string>
    <string name="setting_alert">복습 알림 시간 설정</string>
    <string name="alert_time_description">복습 알림이 발생하는 시간을 수정합니다.</string>
    <string name="time_picker_divider">:</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_apply">확인</string>
    <string name="am">오전</string>
    <string name="pm">오후</string>
    <string name="navigation_alert_setting">복습 알림 시간 설정 화면</string>
    <string name="app_start_description">어원으로 암기 시작하기</string>
    <string name="more_description">더보기 버튼</string>
    <string name="delete_in_menu">삭제</string>
</resources>