<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navgraph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gurumlab.vocaroutine.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_online"
        android:name="com.gurumlab.vocaroutine.OnlineListFragment"
        android:label="@string/fragment_online_list"
        tools:layout="@layout/fragment_online_list" />
    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.gurumlab.vocaroutine.MyListFragment"
        android:label="@string/fragment_my_list"
        tools:layout="@layout/fragment_my_list" >
        <action
            android:id="@+id/action_my_list_to_detail"
            app:destination="@id/navigation_detail" />
    </fragment>
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.gurumlab.vocaroutine.SettingFragment"
        android:label="@string/fragment_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.gurumlab.vocaroutine.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.gurumlab.vocaroutine.DetailListFragment"
        android:label="@string/fragment_detail"
        tools:layout="@layout/fragment_detail_list" >
        <argument
            android:name="list"
            app:argType="com.gurumlab.vocaroutine.MyList" />
    </fragment>
</navigation>