<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.list.MyListFragment">

    <TextView
        android:id="@+id/tv_app_title"
        style="@style/SmallHeadLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/app_name_kr"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_current_title"
        style="@style/MediumHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/my_list"
        android:textColor="@color/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="14dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_title" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_new_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/orange200"
        android:contentDescription="@string/fab_new_list"
        android:insetLeft="5dp"
        android:insetRight="5dp"
        android:minWidth="0dp"
        android:text="@string/new_list"
        android:stateListAnimator="@null"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlayExtended"
        tools:visibility="visible" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation_loading_orange"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_empty_mine"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/empty_mine_description"
        android:src="@drawable/ic_vocabulary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon_color"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_empty_mine"
        style="@style/MediumBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/nothing_mine_yet"
        android:textColor="@color/text_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_empty_mine"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_empty_downloaded"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/empty_mine_description"
        android:src="@drawable/ic_vocabulary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon_color"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_empty_downloaded"
        style="@style/MediumBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/nothing_downloaded_yet"
        android:textColor="@color/text_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_empty_downloaded"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>