<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/orange000"
        tools:context=".ui.making.SaveListDialogFragment">

        <TextView
            android:id="@+id/tv_list_title"
            style="@style/SmallHeadLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="24dp"
            android:text="@string/list_name"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_list_title"
            android:layout_width="255dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:autofillHints="no"
            android:background="@drawable/item_input_box"
            android:hint="@string/fill_in_title"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_list_title" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:paddingBottom="10dp"
            android:text="@string/save"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_list_title" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:paddingBottom="10dp"
            android:text="@string/cancel"
            android:textColor="@color/red"
            app:layout_constraintEnd_toStartOf="@id/btn_done"
            app:layout_constraintTop_toBottomOf="@id/et_list_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>