<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gurumlab.vocaroutine.ui.making.MakingListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.making.MakingListFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layout_app_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back">

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_title"
            style="@style/MediumHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:text="@string/making_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_app_bar" />

        <TextView
            android:id="@+id/tv_load_from_picture"
            style="@style/MediumBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:text="@string/load_from_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <ImageView
            android:id="@+id/iv_load_picture_background"
            android:layout_width="0dp"
            android:layout_height="86dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/taking_photo"
            android:src="@drawable/item_rounded_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_load_from_picture" />

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_load_picture_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/taking_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_camera" />

        <TextView
            android:id="@+id/tv_fill_in_self"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/fill_in_self"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_load_picture_background" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_vocabulary_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="5dp"
            android:hint="@string/vocabulary"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            app:boxStrokeColor="@color/orange200"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/orange200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fill_in_self">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_vocabulary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewModel.word}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_meaning_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="10dp"
            android:hint="@string/meaning"
            android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
            app:boxStrokeColor="@color/orange200"
            app:endIconMode="clear_text"
            app:helperText="@string/meaning_separation"
            app:helperTextEnabled="true"
            app:hintTextColor="@color/orange200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_vocabulary_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_meaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:text="@={viewModel.meaning}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:backgroundTint="@color/orange200"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:minWidth="0dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_meaning_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/orange200"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:minWidth="0dp"
            android:onClick="@{()->viewModel.createList()}"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>