<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="219dp"
        android:layout_height="171dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/tv_app_name"
        style="@style/LargeHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/app_name_kr"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_google_sign_in"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/item_login_button"
        android:drawableStart="@drawable/ic_google"
        android:fontFamily="@font/roboto_medium"
        android:paddingHorizontal="8dp"
        android:stateListAnimator="@null"
        android:text="@string/sign_in_with_google"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:buttonSize="wide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>